# xorq-sklearn-mortgage

./: .envrc  .gitignore  .gitignore.template  expr.py  flake.nix  pyproject.toml
scripts/: 2025-09-02-time-unpack.py
src/xorq_sklearn_mortgage/: __init__.py  constants.py  lib.py  pipeline_lib.py  quickgrove_lib.py  rewrite.py
