[project]
name = "hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "ipython>=9.4.0",
    "quickgrove>=0.1.4",
    "scikit-learn>=1.7.1",
    "urllib3>=2.2.3",
    "xgboost>=3.0.4",
    "xorq>=0.3.0",
]

[project.scripts]
hello = "hello_world:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]
[tool.uv.sources]
xorq = {path = "dist/xorq-0.3.0-py3-none-any.whl"}
